--- a/loginpage.html
+++ b/loginpage.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ANAND MINCONS</title>
-  <link rel="stylesheet" href="styleloginpage.css">
+    <title>Login</title>
 </head>
 <body>
-  <div class="container">
-    <h1>LOGIN DETAILS</h1>
-    <form action="login.php" method="post">
-      <input type="text" name="username" placeholder="Username">
-      <input type="password" name="password" placeholder="Password">
-      <input type="submit" value="Login">
+    <h2>Login</h2>
+    <form action="/login" method="post">
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <input type="submit" value="Login">
+        </div>
     </form>
-  </div>
+    <div>
+        <p>Don't have an account?</p>
+        <a href="/register"><button type="button">Register</button></a>
+    </div>
 </body>
 </html>
