Add Save Prompt

--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
 
     <div class="Logout">
         <button onclick="location.href='/logout'">Logout</button>
-        <button id="adminPanel" style="display: none;" onclick="location.href='/admin'">Admin Panel</button>
+        <a id="adminConsoleButton" href="/admin" style="display: none;">
+            <button>Admin Console</button>
+          </a>
+          
     </div>
     
 
