--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
             </select>
-            <button id="calculate">Calculate</button>
+            <button id="Calculate">Calculate</button>
         </div>
     
         <div class="button-container">
