--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <div class="Duct Classification" style="margin: 10px;">
                 <label for="Duct Classification">Duct Classification</label>
-                <select name="Duct Classification">
+                <select name="DuctClassification">
                 <option value="A">A</option>
                 <option value="B">B</option>
                 <option value="X">X</option>
@@ -265,19 +265,9 @@
    
     <!-- This is for the Buttons at the End -->
     <div class="EndButtons">
-        <div class="calc-container">
-            <input type="text" id="textField" placeholder="Enter Jump Value" />
-            <select id="dropdownMenu">
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-            <button id="Calculate">Calculate</button>
+            
+        <div class="Calculate">
+            <input type="button" name="Calculate" value="Calculate" id="Calculate" />
         </div>
     
         <div class="button-container">
