Refined PDF Template

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <label for="TypeofTunnel">Type of Tunnel</label>
                   <select name="TypeofTunnel"  class="custom-select" id="typeoftunnel">
                     <option value="" selected disabled>Select Option</option>
-                    <option value="DShape">D-Shape</option>
+                    <option value="D-Shape">D-Shape</option>
                     <option value="HorseShoe">Horseshoe</option>
                   </select>
                 </div>
@@ -76,7 +76,7 @@
                 <select name="TypeofExcavation"  class="custom-select">
                 <option value="" selected disabled>Select Option</option>
                 <option value="TBM">TBM</option>
-                <option value="HeadingandBenching">Heading and Benching</option>
+                <option value="Heading and Benching">Heading and Benching</option>
                 </select>
             </div>
 
